refactor nota acompanhamento

--- a/ita.ipynb
+++ b/ita.ipynb
@@ -64,7 +64,7 @@
         "xls = pd.ExcelFile(file_path)\n",
         "xls_social = pd.ExcelFile(file_path_crite)\n",
         "xls_psicologia = pd.ExcelFile(file_path_crite)\n",
-        "xl_geral = pd.ExcelFile(file_path_crite)\n",
+        "xl_pedagogia = pd.ExcelFile(file_path_crite)\n",
         "xl_form = pd.ExcelFile(file_paht_form)\n",
         "#xls_parecer = pd.ExcelFile(file_path_com_parecer)\n",
         "\n",
@@ -72,7 +72,7 @@
         "xls.sheet_names\n",
         "xls_social.sheet_names\n",
         "xls_psicologia.sheet_names\n",
-        "xl_geral.sheet_names\n",
+        "xl_pedagogia.sheet_names\n",
         "xl_form.sheet_names\n",
         "#xls_parecer.sheet_names\n",
         "# Carregar a aba identificada\n",
@@ -80,10 +80,10 @@
         "\n",
         "df_social = pd.read_excel(file_path_crite, sheet_name=\"Serviço Social\")\n",
         "df_psicologia = pd.read_excel(file_path_crite, sheet_name=\"Psicologia\")\n",
-        "df_geral = pd.read_excel(file_path_crite, sheet_name=\"Geral\")\n",
+        "df_pedagogia = pd.read_excel(file_path_crite, sheet_name=\"pedagogia\")\n",
         "df_form_ = pd.read_excel(file_paht_form, sheet_name=\"Sheet1\")\n",
         "df_form = padronizar_grr(df_form_)\n",
-        "#df_parecer = pd.read_excel(file_path_com_parecer, sheet_name=\"geral\")\n",
+        "#df_parecer = pd.read_excel(file_path_com_parecer, sheet_name=\"pedagogia\")\n",
         "\n",
         "\n",
         "\n",
@@ -325,7 +325,7 @@
         "    df_detalhado\n",
         "    .merge(df_social, on=\"GRR\", how=\"left\")       # junta informações sociais\n",
         "    .merge(df_psicologia, on=\"GRR\", how=\"left\")   # junta informações de psicologia\n",
-        "    .merge(df_geral, on=\"GRR\", how=\"left\")        # junta informações gerais\n",
+        "    .merge(df_pedagogia, on=\"GRR\", how=\"left\")        # junta informações gerais\n",
         "   # .merge(df_form, on=\"GRR\", how=\"left\")\n",
         "  )\n",
         "\n",
